incorporate find bugs findings